<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".StudentRegistration">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewId"
        android:textSize="20sp" />
      <TextView
        android:id="@+id/txtViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp" />
    </LinearLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ediTextEnrollment"
      android:textSize="20sp" />
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/txtEnrollment"
      android:hint="@string/enrollment" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/student_s_name"
      android:textSize="20sp" />
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/txtName"
      android:hint="@string/editTextName" />

    <ImageView
      android:id="@+id/imageStudent"
      android:layout_width="182dp"
      android:layout_height="176dp"
      android:src="@drawable/profile"
      android:layout_gravity="center" />

    <EditText
      android:id="@+id/txtCareer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="20sp"
      android:hint="@string/editTextCareer" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/actions" />

    <Button
      android:id="@+id/btnChoseImage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/chosePhoto" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btnSave"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/save" />

      <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />

      <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>